--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,13 @@ env:
 
 script:
 - python manage.py test
+
+deploy:
+-provider: elasticbeanstalk
+-access_key_id: 
+  -secure:$AWSKEY
+-secret_access_key:
+  -secure:$AWSSECRET
+-region:"us-west-2"
+-app:"django-tutorial-redo"
+-env:"django-env6"
