--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ script:
 deploy:
   -provider: elasticbeanstalk
   -access_key_id: 
-    -secure:$AWSKEY
+    -secure:"$AWSKEY"
   -secret_access_key:
-    -secure:$AWSSECRET
+    -secure:"$AWSSECRET"
   -region:"us-west-2"
   -app:"django-tutorial-redo"
   -env:"django-env6"
