--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ script:
 - python manage.py test
 
 deploy:
-  -provider: elasticbeanstalk
-  -access_key_id: 
-    -secure:"$AWSKEY"
-  -secret_access_key:
-    -secure:"$AWSSECRET"
-  -region:"us-west-2"
-  -app:"django-tutorial-redo"
-  -env:"django-env6"
+  provider: elasticbeanstalk
+  access_key_id: 
+    secure:"$AWSKEY"
+  secret_access_key:
+    secure:"$AWSSECRET"
+  region:"us-west-2"
+  app:"django-tutorial-redo"
+  env:"django-env6"
