--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 
 script:
 - black --check .
-- flake8 . --max-length=99
+- flake8 . --max-line-length=99
 - coverage run manage.py test
 
 after-script:
