--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
 - pip install -r requirements.txt
 
 script:
-- black .
+- black --check .
 - flake8 . --max-line-length=99
 - coverage run manage.py test
 
