--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,15 @@ python:
 
 install:
 - pip install -r requirements.txt
-- curl -L https://coveralls.io/coveralls-linux.tar.gz | tar -xz
+- mkdir coverall
+- curl -L https://coveralls.io/coveralls-linux.tar.gz | tar -xz -C ./coverall
 
 script:
 - black --check .
 - flake8 . --max-line-length=99
 - coverage run manage.py test
 - coverage xml
-- coveralls report --repo-token=$COVERALLTOKEN coverages.xml
+- ./coverall/coveralls report --repo-token=$COVERALLTOKEN coverages.xml
 
 deploy:
   provider: elasticbeanstalk
